fix: word break in table

--- a/src/pages/users/_user.scss
+++ b/src/pages/users/_user.scss
@@ -43,15 +43,6 @@
   .users-table {
     position: relative;
 
-    .org-col,
-    .name-col,
-    .email-col,
-    .phone-col,
-    .created-col {
-      padding-right: 1.5rem;
-      word-break: break-all;
-    }
-
     .actions-col {
       padding: 1.5rem;
       height: 100%;
@@ -130,4 +121,12 @@
   text-transform: uppercase;
   border-radius: 100px;
   padding: 0.5rem 0.875rem;
+}
+.users-table .org-col,
+.name-col,
+.email-col,
+.phone-col,
+.created-col {
+  padding-right: 1.5rem !important;
+  word-break: break-word;
 }
